2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	  actually set moodPending, to make sure we don't start a component
	  more than once.  This fits with all the code that checks moodPending.
	  Solves the problem of having components being started more than once
	  if we have multiple loadConfiguration calls in a row.

2006-08-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/component.py:
	Document _tryWhatCanBeStarted a bit more and give rationale
	for why it's doing what it's doing.
	* doc/random/component-dependencies/depgraph-scenario1.dia:
	Update diagram to be up to date with latest component dependencies
	things.

2006-08-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py
	(Dispatcher.createAvatarFor.got_identity): Fix indentation error.
	(Vishnu.computeIdentity): Always return a deferred.

	* flumotion/test/test_twisted_integration.py (_deferred_result):
	Pull from common.py.

	* flumotion/test/test_manager_manager.py
	(TestVishnu._requestAvatar): New helper method.
	(TestVishnu._loginWorker, TestVishnu._loginComponent): Use
	_requestAvatar, return a deferred now.
	(TestVishnu._logoutAvatar): Rearrange arg order to correspond to
	manager.py.
	(TestVishnu.testConfigBeforeWorker): 
	(TestVishnu.testConfigAfterWorker)
	(TestVishnu._verifyConfigAndOneWorker): 
	(TestVishnu.testWorker): Adapt to deferred avatars.

	* flumotion/test/common.py (deferred_result): New function, a
	decorator for tests that return deferreds that will make T1.3
	happy.
	(deferred_result): Decorator to handle old twisted deferred
	returns.

2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  error()'s prototype has changed at some point, so fix our override

2006-08-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py
	(Dispatcher.requestAvatar.got_error): Fix bogus .trap statement :/
